--- a/package.json
+++ b/package.json
@@ -1,38 +1,57 @@
 {
-  "name": "store-redux-part2",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
-  },
+  "name": "mern-shopping",
+  "version": "1.0.0",
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "server/server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "seed": "cd server && npm run seed",
+    "build": "cd client && npm run build"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^5.1.0"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "dependencies": {
+    "ansi-styles": "^3.2.1",
+    "chalk": "^2.4.2",
+    "color-convert": "^1.9.3",
+    "date-fns": "^2.25.0",
+    "color-name": "^1.1.3",
+    "decamelize": "^1.2.0",
+    "error-ex": "^1.3.2",
+    "function-bind": "^1.1.1",
+    "escape-string-regexp": "^1.0.5",
+    "get-caller-file": "^2.0.5",
+    "has": "^1.0.3",
+    "has-flag": "^3.0.0",
+    "hosted-git-info": "^2.8.9",
+    "is-arrayish": "^0.2.1",
+    "lodash": "^4.17.21",
+    "is-core-module": "^2.7.0",
+    "json-parse-better-errors": "^1.0.2",
+    "p-limit": "^2.3.0",
+    "normalize-package-data": "^2.5.0",
+    "p-try": "^2.2.0",
+    "path-parse": "^1.0.7",
+    "require-directory": "^2.1.1",
+    "resolve": "^1.18.1",
+    "require-main-filename": "^2.0.0",
+    "set-blocking": "^2.0.0",
+    "rxjs": "^6.6.7",
+    "spawn-command": "^0.0.2-1",
+    "spdx-correct": "^3.1.1",
+    "spdx-exceptions": "^2.3.0",
+    "spdx-license-ids": "^3.0.10",
+    "spdx-expression-parse": "^3.0.1",
+    "supports-color": "^5.5.0",
+    "tree-kill": "^1.2.2",
+    "validate-npm-package-license": "^3.0.4",
+    "which-module": "^2.0.0",
+    "y18n": "^4.0.3"
   }
 }
